--- a/index.html
+++ b/index.html
@@ -1,14 +1,72 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Mon guide</title>
-  </head>
-  <body>
-    <button onclick="document.getElementById('popup').style.display='block'">Télécharger le guide</button>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Guide Immobilier – Accès réservé</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: #fff;
+      text-align: center;
+      padding-top: 100px;
+    }
 
-    <div id="popup" style="display:none;position:fixed;top:20%;left:20%;background:#fff;padding:20px;z-index:1000">
-      <iframe data-tally-src="https://tally.so/r/npqXWZ" width="100%" height="400" frameborder="0"></iframe>
+    button {
+      background-color: #CBA135;
+      border: none;
+      color: white;
+      padding: 15px 30px;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .popup-overlay {
+      display: none;
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: rgba(0, 0, 0, 0.75);
+      z-index: 1000;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .popup-content {
+      background-color: #1A1A1A;
+      padding: 30px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 600px;
+    }
+
+    .close-btn {
+      color: #fff;
+      float: right;
+      font-size: 20px;
+      cursor: pointer;
+    }
+
+    iframe {
+      width: 100%;
+      height: 500px;
+      border: none;
+      border-radius: 10px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>📘 Guide Immobilier à Dubaï</h1>
+  <p>Accédez à notre guide exclusif après avoir complété le formulaire</p>
+  <button onclick="document.getElementById('popup').style.display='flex'">Télécharger le guide</button>
+
+  <div class="popup-overlay" id="popup">
+    <div class="popup-content">
+      <span class="close-btn" onclick="document.getElementById('popup').style.display='none'">✕</span>
+      <iframe src="https://tally.so/r/npqXWZ"></iframe>
     </div>
-  </body>
-</html>
+  </div>
 
+</body>
+</html>
