--- a/index.html
+++ b/index.html
@@ -10,40 +10,44 @@
 
   <style>
     body {
-      background-color: #111;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 100px;
-    }
+  background-image: url('https://source.unsplash.com/1600x900/?dubai-night');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  font-family: 'Inter', sans-serif;
+  color: #F4F4F4;
+  text-align: center;
+  padding-top: 100px;
+}
 
-    h1 {
-      font-size: 32px;
-      margin-bottom: 10px;
-    }
+h1 {
+  font-family: 'Playfair Display', serif;
+  font-size: 36px;
+  color: #CBA135;
+  margin-bottom: 10px;
+}
 
-    p {
-      font-size: 18px;
-      margin-bottom: 30px;
-    }
+p {
+  font-size: 18px;
+  color: #B0B0B0;
+  margin-bottom: 40px;
+}
 
-    button {
-      background-color: #CBA135;
-      border: none;
-      color: white;
-      padding: 15px 30px;
-      font-size: 18px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+button {
+  background-color: #CBA135;
+  border: none;
+  color: #fff;
+  padding: 15px 30px;
+  font-size: 18px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
 
-    button:hover {
-      background-color: #a3822c;
-    }
-  </style>
-</head>
-<body>
+button:hover {
+  background-color: #A77F28;
+}
+
 
   <h1>📘 Guide Immobilier à Dubaï</h1>
   <p>Remplissez le formulaire pour accéder à votre guide PDF</p>
