--- a/index.html
+++ b/index.html
@@ -5,42 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Guide Immobilier à Dubaï</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Playfair+Display&display=swap" rel="stylesheet">
-
   <!-- Script Tally -->
   <script async src="https://tally.so/widgets/embed.js"></script>
+
+  <!-- Google Fonts (facultatif mais lisible) -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background-image: url('https://images.unsplash.com/photo-1603721721782-66175a5ff8e5?auto=format&fit=crop&w=1600&q=80');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      color: #F4F4F4;
-      text-align: center;
-      min-height: 100vh;
+      background-color: #ffffff;
+      color: #222;
       display: flex;
       flex-direction: column;
+      align-items: center;
       justify-content: center;
+      min-height: 100vh;
+      text-align: center;
       padding: 40px 20px;
     }
 
     h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 38px;
-      color: #CBA135;
+      font-size: 32px;
       margin-bottom: 10px;
     }
 
     p {
-      font-size: 18px;
-      color: #B0B0B0;
-      margin-bottom: 40px;
+      font-size: 16px;
+      margin-bottom: 30px;
     }
 
     button {
@@ -48,29 +42,14 @@
       border: none;
       color: white;
       padding: 15px 30px;
-      font-size: 18px;
-      border-radius: 8px;
+      font-size: 16px;
+      border-radius: 6px;
       cursor: pointer;
       transition: background 0.3s ease;
     }
 
     button:hover {
-      background-color: #A77F28;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 28px;
-      }
-
-      p {
-        font-size: 16px;
-      }
-
-      button {
-        width: 100%;
-        font-size: 16px;
-      }
+      background-color: #a3822c;
     }
   </style>
 </head>
@@ -78,13 +57,13 @@
 <body>
 
   <h1>📘 Guide Immobilier à Dubaï</h1>
-  <p>Remplissez ce court formulaire pour accéder à votre guide PDF exclusif</p>
+  <p>Remplissez le formulaire pour accéder au guide PDF</p>
 
-  <!-- Bouton avec popup Tally -->
+  <!-- Bouton Tally -->
   <button
     data-tally-open="npqXWZ"
-    data-tally-emoji-text="🏙️"
-    data-tally-emoji-animation="heart-beat"
+    data-tally-emoji-text="📩"
+    data-tally-emoji-animation="head-shake"
   >
     Télécharger le guide
   </button>
