--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guide Immobilier à Dubaï</title>
-
-  <!-- Script Tally -->
+  <meta charset="UTF-8">
+  <title>Guide Immobilier – Accès réservé</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Script Tally pour popup -->
   <script async src="https://tally.so/widgets/embed.js"></script>
-
-  <!-- Google Fonts (facultatif mais lisible) -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: #ffffff;
-      color: #222;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+      background-color: #111;
+      color: #fff;
+      font-family: Arial, sans-serif;
       text-align: center;
-      padding: 40px 20px;
+      padding-top: 100px;
     }
 
     h1 {
@@ -33,7 +23,7 @@
     }
 
     p {
-      font-size: 16px;
+      font-size: 18px;
       margin-bottom: 30px;
     }
 
@@ -42,10 +32,10 @@
       border: none;
       color: white;
       padding: 15px 30px;
-      font-size: 16px;
-      border-radius: 6px;
+      font-size: 18px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: 0.3s;
     }
 
     button:hover {
@@ -53,13 +43,12 @@
     }
   </style>
 </head>
-
 <body>
 
   <h1>📘 Guide Immobilier à Dubaï</h1>
-  <p>Remplissez le formulaire pour accéder au guide PDF</p>
+  <p>Remplissez le formulaire pour accéder à votre guide PDF</p>
 
-  <!-- Bouton Tally -->
+  <!-- Bouton qui ouvre le formulaire en popup -->
   <button
     data-tally-open="npqXWZ"
     data-tally-emoji-text="📩"
