--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <style>
     body {
-      background-color: #111;
-      color: #fff;
+      background-color: #0B0F18; /* Bleu nuit luxe */
+      color: #F4F4F4; /* Blanc perle */
       font-family: Arial, sans-serif;
       text-align: center;
       padding-top: 100px;
@@ -20,26 +20,28 @@
     h1 {
       font-size: 32px;
       margin-bottom: 10px;
+      color: #CBA135; /* Titre en or */
     }
 
     p {
       font-size: 18px;
       margin-bottom: 30px;
+      color: #B0B0B0; /* Texte secondaire gris clair */
     }
 
     button {
-      background-color: #CBA135;
+      background-color: #CBA135; /* Or */
       border: none;
       color: white;
       padding: 15px 30px;
       font-size: 18px;
       border-radius: 8px;
       cursor: pointer;
-      transition: 0.3s;
+      transition: background 0.3s;
     }
 
     button:hover {
-      background-color: #a3822c;
+      background-color: #A77F28; /* Or foncé au hover */
     }
   </style>
 </head>
