--- a/index.html
+++ b/index.html
@@ -10,27 +10,34 @@
 
   <style>
     body {
-      background-color: #0B0F18; /* Bleu nuit luxe */
-      color: #F4F4F4; /* Blanc perle */
+      background-color: #ffffff; /* Fond blanc */
+      color: #222222;
       font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      flex-direction: column;
       text-align: center;
-      padding-top: 100px;
+      padding: 40px 20px;
     }
 
     h1 {
       font-size: 32px;
       margin-bottom: 10px;
-      color: #CBA135; /* Titre en or */
+      color: #CBA135; /* Titre doré */
     }
 
     p {
       font-size: 18px;
       margin-bottom: 30px;
-      color: #B0B0B0; /* Texte secondaire gris clair */
+      color: #444;
     }
 
     button {
-      background-color: #CBA135; /* Or */
+      background-color: #CBA135;
       border: none;
       color: white;
       padding: 15px 30px;
@@ -41,7 +48,7 @@
     }
 
     button:hover {
-      background-color: #A77F28; /* Or foncé au hover */
+      background-color: #A77F28;
     }
   </style>
 </head>
