--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Guide Immobilier – Accès réservé</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <!-- Script Tally pour popup -->
   <script async src="https://tally.so/widgets/embed.js"></script>
 
   <style>
-    body {
-      background-color: #ffffff; /* Fond blanc */
-      color: #222222;
-      font-family: Arial, sans-serif;
+    html, body {
+      height: 100%;
       margin: 0;
-      padding: 0;
+      background-color: #ffffff; /* Fond blanc */
+      font-family: Arial, sans-serif;
+      color: #222222;
+    }
+
+    body {
       display: flex;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
-      flex-direction: column;
       text-align: center;
-      padding: 40px 20px;
+      padding: 20px;
+    }
+
+    .container {
+      max-width: 600px;
     }
 
     h1 {
@@ -53,18 +58,18 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <h1>📘 Guide Immobilier à Dubaï</h1>
+    <p>Remplissez le formulaire pour accéder à votre guide PDF</p>
 
-  <h1>📘 Guide Immobilier à Dubaï</h1>
-  <p>Remplissez le formulaire pour accéder à votre guide PDF</p>
-
-  <!-- Bouton qui ouvre le formulaire en popup -->
-  <button
-    data-tally-open="npqXWZ"
-    data-tally-emoji-text="📩"
-    data-tally-emoji-animation="head-shake"
-  >
-    Télécharger le guide
-  </button>
-
+    <!-- Bouton qui ouvre le formulaire en popup -->
+    <button
+      data-tally-open="npqXWZ"
+      data-tally-emoji-text="📩"
+      data-tally-emoji-animation="head-shake"
+    >
+      Télécharger le guide
+    </button>
+  </div>
 </body>
 </html>
